--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -27,8 +27,7 @@
   <div class="row">
   <div class="col-lg-12 text-right px-8">
     <button [routerLink]="['/user-management/viewCirclesfence']" class="ml-4" mat-flat-button [color]="'primary'">
-      <mat-icon [svgIcon]="'heroicons_outline:plus'"></mat-icon>
-      <span class="ml-2 mr-1">View Map </span>
+      <mat-icon class="mr-2">visibility</mat-icon>View Map
     </button>
   </div>
 </div>
