--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -169,7 +169,7 @@
 
     <div class="mt-2 justify-content-end text-right border-t py-4" >
         <button mat-raised-button color="primary" class="mr-4" (click)="Add()"><mat-icon class="mr-2">add_circle</mat-icon>Add</button>
-        <button mat-raised-button class="org-button button-red" (click)="clear()">Clear</button>
+        <button mat-raised-button class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" (click)="clear()"><mat-icon class="mr-2"> clear_all</mat-icon>Clear</button>
     </div>
 
     <div class="col-lg-12">
