--- a/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
+++ b/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
@@ -182,7 +182,7 @@
     </div>
 
     <div class="mt-2 justify-content-center text-right border-t py-4" >
-        <button mat-raised-button color="primary" (click)="saveSubmit()" *ngIf="!viewOnly" ><mat-icon class="mr-2">save_alt</mat-icon>Save & Submit</button>
+        <button mat-raised-button color="primary" (click)="saveSubmit()" *ngIf="!viewOnly" ><mat-icon class="mr-2">save</mat-icon>Save & Submit</button>
         <button mat-raised-button color="primary" class="ml-2" (click)="deleteVendor()" *ngIf="viewOnly || isEdit" >Delete Vendor</button>
     </div>
 
