--- a/src/app/modules/journal-voucher/jv-form/jv-form.component.html
+++ b/src/app/modules/journal-voucher/jv-form/jv-form.component.html
@@ -1,4 +1,4 @@
-<div class=" px-5 py-2 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
     <div class="text-4xl font-extrabold tracking-tight">Journal Voucher</div>
     <div class="pt-4" [formGroup]="JvForm">
         
