--- a/src/app/modules/journal-voucher/search-jv/search-jv.component.html
+++ b/src/app/modules/journal-voucher/search-jv/search-jv.component.html
@@ -113,9 +113,8 @@
             <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
-                    <button mat-raised-button color="accent"
-                            type="button" (click)="find()"><span><i
-                        class="fa fa-search mt-4"> &nbsp;</i> Find</span></button>
+                    <button mat-raised-button color="primary"
+                            type="button" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
                 </div>
             </div>
 
