--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -4,31 +4,35 @@
   <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4">
     <div class="text-4xl font-extrabold tracking-tight"> Create Fense</div>
     <div class="flex flex-shrink-0 items-center sm:mt-0 sm:ml-4">
-      <mat-form-field class="mat-form-field-fluid" appearance="outline" id="focus-removal">
-        <mat-label>Zone</mat-label>
-        <mat-select (selectionChange)="GetBranches($event)">
-          <mat-option *ngFor="let zone of Zones" [value]="zone.ZoneId">
-            {{zone.ZoneName }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+      <button [routerLink]="['/user-management/viewCirclesfence']" class="ml-4" mat-flat-button [color]="'primary'">
+        <mat-icon class="mr-2">visibility</mat-icon>View Map
+      </button>
 
-      <mat-form-field class="mat-form-field-fluid mx-4" appearance="outline" id="focus-removal">
-        <mat-label>Branch</mat-label>
-        <mat-select (selectionChange)="GetCircles($event)">
-          <mat-option *ngFor="let branch of Branches" [value]="branch.BranchCode">
-            {{branch.Name }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
     </div>
     
   </div>
   <div class="row">
-  <div class="col-lg-12 text-right px-8">
-    <button [routerLink]="['/user-management/viewCirclesfence']" class="ml-4" mat-flat-button [color]="'primary'">
-      <mat-icon class="mr-2">visibility</mat-icon>View Map
-    </button>
+  <div class="col-lg-4 col-sm-12">
+    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
+      <mat-label>Zone</mat-label>
+      <mat-select (selectionChange)="GetBranches($event)">
+        <mat-option *ngFor="let zone of Zones" [value]="zone.ZoneId">
+          {{zone.ZoneName }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+
+  </div>
+  <div class="col-lg-4 col-sm-12">
+    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" id="focus-removal">
+      <mat-label>Branch</mat-label>
+      <mat-select (selectionChange)="GetCircles($event)">
+        <mat-option *ngFor="let branch of Branches" [value]="branch.BranchCode">
+          {{branch.Name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
   </div>
 </div>
   <!-- Main -->
