--- a/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
+++ b/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
@@ -1,7 +1,7 @@
-<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="text-4xl font-extrabold tracking-tight px-2">Deceased Customers</div>
     <div class="kt-form kt-form-margin" [formGroup]="deceasedCustomerSearch">
-        <div class="pt-4">
+        <div class="row align-items-center mb-2">
 
 <!--            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">-->
 <!--                <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">-->
@@ -23,36 +23,36 @@
 <!--                    </mat-select>-->
 <!--                </mat-form-field>-->
 <!--            </div>-->
-
-<div class="row">
-    <div class="col-lg-3 col-sm-12">
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
-                <mat-label class="customMatLabel">Zone</mat-label>
-                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
-                    <mat-option [value]="SelectedZones?.ZoneId">
-                        {{SelectedZones?.ZoneName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
-                <mat-label class="customMatLabel">Zone</mat-label>
-                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
-                            (selectionChange)="changeZone($event)">
-                    <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                [disabled]="disable_zone">
-                        {{zone?.ZoneName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
-    </div>
-    <div class="col-lg-3 col-sm-12"  *ngIf="!isUserAdmin && !isZoneUser">
-        
-        <div class="col-md-12 kt-margin-bottom-10-mobile">
+            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
+                    <mat-label class="customMatLabel">Zone</mat-label>
+                    <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
+                        <mat-option [value]="SelectedZones?.ZoneId">
+                            {{SelectedZones?.ZoneName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
+                    <mat-label class="customMatLabel">Zone</mat-label>
+                    <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
+                                (selectionChange)="changeZone($event)">
+                        <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                                    [disabled]="disable_zone">
+                            {{zone?.ZoneName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col-md-2 kt-margin-bottom-10-mobile" *ngIf="!isUserAdmin && !isZoneUser">
+                <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                    <mat-label>Branch</mat-label>
+                    <input matInput value="{{Branch.Name}}" readonly="readonly" maxlength="30" autocomplete="off">
+                    <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
+                </mat-form-field>
+            </div>
 
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                <mat-form-field class="mat-form-field-fluid" appearance="outline">
                     <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
                     <mat-select [(ngModel)]="selected_b" formControlName="BranchId" [disabled]="disable_branch"
                                 (selectionChange)="changeBranch($event)"
@@ -71,102 +71,65 @@
                     </mat-select>
                 </mat-form-field>
             </div>
-        </div>
-    </div>
-    <div  class="col-lg-3 col-sm-12">
-        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-            <mat-label>Branch</mat-label>
-            <input matInput value="{{Branch.Name}}" readonly="readonly" maxlength="30" autocomplete="off">
-        
-        </mat-form-field>
-    </div>
+            <div class="col-md-2 kt-margin-bottom-10-mobile">
+                <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                    <mat-label>Cnic</mat-label>
+                    <input appNumberOnly matInput formControlName="Cnic" placeholder="" maxlength="13" autocomplete="off">
+                    <!-- <mat-error *ngIf="hasError('Cnic', 'pattern')">Cnic should only contain numberic values <strong>required</strong></mat-error> -->
+                    <!-- <mat-error *ngIf="deceasedCustomerSearch.get('Cnic').hasError('required')">
+                    First Name is Required!
+                  </mat-error>
+                  -->
+                    <!-- <mat-error *ngIf="deceasedCustomerSearch.get('Cnic').hasError('minlength')">
+                        CNIC should consist 13 characters
+                    </mat-error> -->
+                    <!--
+                                  <mat-error *ngIf="deceasedCustomerSearch.get('Cnic').hasError('maxlength')">
+                                    CNIC should consist 13 characters
+                                  </mat-error> -->
+
+                    <mat-error *ngIf="deceasedCustomerSearch.get('Cnic').hasError('pattern')">
+                        CNIC should only contain upto 13 numberic characters.
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="col-md-2 kt-margin-bottom-10-mobile">
+                <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                    <mat-label>Customer Name</mat-label>
+                    <input appAlphabetOnly matInput formControlName="CustomerName" placeholder="" maxlength="100" autocomplete="off">
+                    <!--  <mat-error *ngIf="hasError('landName', 'required')">landName <strong>required</strong></mat-error>-->
+
+                </mat-form-field>
+            </div>
+            <div class="col-md-2 kt-margin-bottom-10-mobile">
+                <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                    <mat-label>Father Name</mat-label>
+                    <input appAlphabetOnly matInput formControlName="FatherName" placeholder="" maxlength="100" autocomplete="off">
+                    <!--  <mat-error *ngIf="hasError('landName', 'required')">landName <strong>required</strong></mat-error>-->
+                </mat-form-field>
+            </div>
+            <div *ngIf="CustomerStatusLov"  class="col-md-2 kt-margin-bottom-10-mobile">
+
+                <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                    <mat-label>Customer Status</mat-label>
+                    <mat-select formControlName="CustomerStatus">
+                        <mat-option>
+                            Select
+                        </mat-option>
+                        <mat-option *ngFor="let obj of CustomerStatusLov" [value]="obj.Value">
+                            {{obj.Name}}
+                        </mat-option>
+                    </mat-select>
+
+                </mat-form-field>
 
 
-
-</div>
-
-
-
-<div class="row">
-    <div class="col-lg-3 col-sm-12">
-        <div class="col-md-12 kt-margin-bottom-10-mobile">
-            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                <mat-label>Cnic</mat-label>
-                <input appNumberOnly matInput formControlName="Cnic" placeholder="" maxlength="13" autocomplete="off">
-                <!-- <mat-error *ngIf="hasError('Cnic', 'pattern')">Cnic should only contain numberic values <strong>required</strong></mat-error> -->
-                <!-- <mat-error *ngIf="deceasedCustomerSearch.get('Cnic').hasError('required')">
-                First Name is Required!
-              </mat-error>
-              -->
-                <!-- <mat-error *ngIf="deceasedCustomerSearch.get('Cnic').hasError('minlength')">
-                    CNIC should consist 13 characters
-                </mat-error> -->
-                <!--
-                              <mat-error *ngIf="deceasedCustomerSearch.get('Cnic').hasError('maxlength')">
-                                CNIC should consist 13 characters
-                              </mat-error> -->
-
-                <mat-error *ngIf="deceasedCustomerSearch.get('Cnic').hasError('pattern')">
-                    CNIC should only contain upto 13 numberic characters.
-                </mat-error>
-            </mat-form-field>
-        </div>
-    </div>
-    <div class="col-lg-3 col-sm-12">
-        <div class="col-md-12 kt-margin-bottom-10-mobile">
-            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                <mat-label>Customer Name</mat-label>
-                <input appAlphabetOnly matInput formControlName="CustomerName" placeholder="" maxlength="100" autocomplete="off">
-                <!--  <mat-error *ngIf="hasError('landName', 'required')">landName <strong>required</strong></mat-error>-->
-
-            </mat-form-field>
-        </div>
-    </div>
-    <div class="col-lg-3 col-sm-12">
-        <div class="col-md-12 kt-margin-bottom-10-mobile">
-            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                <mat-label>Father Name</mat-label>
-                <input appAlphabetOnly matInput formControlName="FatherName" placeholder="" maxlength="100" autocomplete="off">
-                <!--  <mat-error *ngIf="hasError('landName', 'required')">landName <strong>required</strong></mat-error>-->
-            </mat-form-field>
-        </div>
-    </div>
-    <div class="col-lg-3 col-sm-12">
-        <div *ngIf="CustomerStatusLov"  class="col-md-12 kt-margin-bottom-10-mobile">
-
-            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                <mat-label>Customer Status</mat-label>
-                <mat-select formControlName="CustomerStatus">
-                    <mat-option>
-                        Select
-                    </mat-option>
-                    <mat-option *ngFor="let obj of CustomerStatusLov" [value]="obj.Value">
-                        {{obj.Name}}
-                    </mat-option>
-                </mat-select>
-
-            </mat-form-field>
-
-
-            <!--<mat-form-field class="mat-form-field-fluid" appearance="outline">
-          <mat-label>land Status</mat-label>
-          <input matInput formControlName="landStatus" placeholder="Enter land Status" maxlength="30" autocomplete="off">
-          <mat-error *ngIf="hasError('landStatus', 'required')">landStatus <strong>required</strong></mat-error>
-        </mat-form-field>-->
-        </div>
-
-    </div>
-    <div class="col-lg-4 col-sm-12 ">
-        <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary mat-raised-button"  [disabled]="deceasedCustomerSearch.invalid" (click)="SearchDeceasedCustomer()" color="primary" >
-            <mat-icon class="mr-2">search</mat-icon> Search
-        </button>
-    </div>
-
-</div>
-
-
-
-
+                <!--<mat-form-field class="mat-form-field-fluid" appearance="outline">
+              <mat-label>land Status</mat-label>
+              <input matInput formControlName="landStatus" placeholder="Enter land Status" maxlength="30" autocomplete="off">
+              <mat-error *ngIf="hasError('landStatus', 'required')">landStatus <strong>required</strong></mat-error>
+            </mat-form-field>-->
+            </div>
 
         </div>
         <!-- <div class="row align-items-center mb-4">
@@ -178,7 +141,9 @@
           </div> -->
         <div class="row align-items-center mb-4">
             <div class="col-lg-2 col-md-3">
-
+                <button [disabled]="deceasedCustomerSearch.invalid" (click)="SearchDeceasedCustomer()" color="primary" type="button" class="btn btn-secondary mt-19 kt-login__btn-primary btn-block">
+                    <span><i class="fa fa-search"> &nbsp;</i> Search</span>
+                </button>
             </div>
         </div>
 
@@ -203,7 +168,7 @@
         </div> -->
     </div>
     <!-- Search end -->
-    <div class="mat-table__wrapper overflow-scroll"  [style.height]="gridHeight">
+    <div class="mat-table__wrapper" [style.height]="gridHeight">
 
         <mat-table class="lmat-elevation-z8"
                    #table
