--- a/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
+++ b/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
@@ -47,8 +47,8 @@
             </mat-form-field>
         </div>
     </div>
-    <div class="col-lg-3 col-sm-12"  *ngIf="!isUserAdmin && !isZoneUser">
-        
+    <div class="col-lg-3 col-sm-12" >
+
         <div class="col-md-12 kt-margin-bottom-10-mobile">
 
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
