--- a/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
+++ b/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
@@ -233,14 +233,19 @@
         <div class="mat-table__message" *ngIf="!loading && dataSource.data.length==0">No records found</div>
         <div class="mat-table__message" *ngIf="loading">Please wait....</div>
     </div>
+    <div class="row">
+        <div class="col-lg-12 text-right py-2 border-t bg-gray-50 col-sm-12">
+            <div class="mat-table__bottom">
+                <mat-spinner [diameter]="20" *ngIf="loading"></mat-spinner>
+                <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15, 30, 50, 100]" [showFirstLastButtons]="true"></mat-paginator>
+        
+                <!--<mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
+                <mat-paginator [pageSize]="10" [pageSizeOptions]="[3, 5, 10]" [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>-->
+            </div>
+        </div>
 
-    <div class="mat-table__bottom">
-        <mat-spinner [diameter]="20" *ngIf="loading"></mat-spinner>
-        <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15, 30, 50, 100]" [showFirstLastButtons]="true"></mat-paginator>
-
-        <!--<mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
-        <mat-paginator [pageSize]="10" [pageSizeOptions]="[3, 5, 10]" [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>-->
     </div>
+
     <ngx-spinner bdColor="rgba(51,51,51,0.8)"
                  size="medium"
                  color="#ecbd00"
