--- a/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
+++ b/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
@@ -73,13 +73,13 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-3 col-sm-12">
-        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-            <mat-label>Branch</mat-label>
-            <input matInput value="{{Branch.Name}}" readonly="readonly" maxlength="30" autocomplete="off">
-            <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
-        </mat-form-field>
-    </div>
+<!--    <div class="col-lg-3 col-sm-12">-->
+<!--        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--            <mat-label>Branch</mat-label>-->
+<!--            <input matInput value="{{Branch.Name}}" readonly="readonly" maxlength="30" autocomplete="off">-->
+<!--            &lt;!&ndash;  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>&ndash;&gt;-->
+<!--        </mat-form-field>-->
+<!--    </div>-->
     <div class="col-lg-3 col-sm-12">
         <div class="col-md-12 kt-margin-bottom-10-mobile">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
