--- a/src/app/modules/deceased-customer/view-file/view-file.component.html
+++ b/src/app/modules/deceased-customer/view-file/view-file.component.html
@@ -1,13 +1,23 @@
 
 <div *ngIf="url"> 
-<div class="bg-white float-right sticky-top col-lg-12">
-    <button mat-icon-button class="close-button float-right" [mat-dialog-close]="true">
-        <!-- X -->
-        <mat-icon class="close-icon" color="warn">close</mat-icon>
-    </button>
-</div>
-    
+    <div class="row">
+        <div class="col-lg-12 sticky-top text-right relative">
+            <div class="bg-white float-right">
+                <button mat-icon-button class="close-button float-right absolute right-6 top-4 bg-white" [mat-dialog-close]="true">
+                    <!-- X -->
+                    <mat-icon class="close-icon" color="warn">close</mat-icon>
+                </button>
+            </div>
+        </div>
+    </div>
 
-     <img class="images" [src]="url" style="width:100%; height:100%; position: relative" />
+    
+    <div class="row">
+        <div class="col-lg-12">
+            <img class="images" style="width: 100%; height: 100%;" [src]="url" />
+        </div>
+    </div>
+        
 
     </div>
+    
