--- a/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
+++ b/src/app/modules/deceased-customer/search-deceased/search-deceased.component.html
@@ -203,7 +203,7 @@
         </div> -->
     </div>
     <!-- Search end -->
-    <div class="mat-table__wrapper overflow-scroll h-96"  style="height: 400px;">
+    <div class="mat-table__wrapper overflow-scroll" [style.height]="gridHeight">
 
         <mat-table class="lmat-elevation-z8"
                    #table
